small bug fixes

--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -5,7 +5,9 @@
         <h1>Влезе във вашият профил</h1>
         <hr>
       </div> -->
-
+      <div class="col-12 text-center">
+        <img class="login-img" src="assets/images/login-image.png" alt="">
+      </div>
 
       <mat-form-field class="col-6">
         <input type="text" placeholder="Потребителско име" matInput formControlName="username" autocomplete="off" required>
