--- a/src/app/modules/home/homepage/homepage.component.html
+++ b/src/app/modules/home/homepage/homepage.component.html
@@ -1,6 +1,7 @@
 <section class="section" id="first">
     <!-- <a pageScroll href="#awesomePart">Take me to the awesomeness</a> -->
     <div class="search-form container">
+        {{ 'HOME.TITLE' | translate }}
         <app-search-form></app-search-form>
     </div>
 </section>
