--- a/src/app/modules/hosting/add-vehicle/form-description/form-description.component.html
+++ b/src/app/modules/hosting/add-vehicle/form-description/form-description.component.html
@@ -3,7 +3,7 @@
         <div class="col-12 col-md-6">
             <h4>Добавете описание:</h4>
             <mat-form-field class="example-full-width col-12" appearance="fill">
-                <textarea matInput matTextareaAutosize="true" matAutosizeMinRows=25 placeholder="Leave a comment"></textarea>
+                <textarea matInput matTextareaAutosize="true" matAutosizeMinRows=15 placeholder="Напишете нещо повече за колата..."></textarea>
             </mat-form-field>
         </div>
     
