--- a/src/app/modules/vehicles/car-details/car-reservation-tab/car-reservation-tab.component.html
+++ b/src/app/modules/vehicles/car-details/car-reservation-tab/car-reservation-tab.component.html
@@ -6,6 +6,7 @@
 
 <div class="col-12 text-center">
   <owl-date-time-inline
+  class="owl"
   [(ngModel)]="selectedMoments"
   [selectMode]="'range'"
   [pickerType]="'calendar'"
