--- a/src/app/modules/vehicles/reservation-form/car-summary/car-summary.component.html
+++ b/src/app/modules/vehicles/reservation-form/car-summary/car-summary.component.html
@@ -16,7 +16,7 @@
         </div>
         <div class="row">
             <div class="col-6 text-left">
-                <app-show-rating [rate]="car.id"></app-show-rating>
+                <app-show-rating [rate]="car.rating"></app-show-rating>
             </div>
             <div class="col-6 text-right car-city">
                 <i class="fas fa-user-check" style="font-size: 1rem"></i> {{ car.owner.username }}
