--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <mdb-navbar [SideClass]="sideclass" [containerInside]="true" appNavbar>
   <mdb-navbar-brand>
     <a class="logo navbar-brand" pageScroll [routerLink]="['']" href="#myBody">
-      <strong>LOGO</strong>
+      <!-- <strong>LOGO</strong> -->
+      <img src="assets/images/logo-slide-3.png" alt="">
     </a>
   </mdb-navbar-brand>
   <links>
