--- a/src/app/modules/home/homepage/homepage.component.html
+++ b/src/app/modules/home/homepage/homepage.component.html
@@ -1,10 +1,12 @@
-<section class="section" id="first">
-    <!-- <a pageScroll href="#awesomePart">Take me to the awesomeness</a> -->
-    <div class="search-form container">
-        {{ 'HOME.TITLE' | translate }}
-        <app-search-form></app-search-form>
-    </div>
-</section>
-<section class="section-2" id="awesomePart">
-    <a pageScroll href="#first">Take me to the awesomeness</a>
-</section>
+<div class="homepage">
+    <section class="section" id="first">
+        <!-- <a pageScroll href="#awesomePart">Take me to the awesomeness</a> -->
+        <div class="search-form container">
+            <!-- {{ 'HOME.TITLE' | translate }}  Lang: {{ language | async }} -->
+            <app-search-form></app-search-form>
+        </div>
+    </section>
+    <section class="section-2" id="about-us">
+        
+    </section>
+</div>
