--- a/src/app/modules/user/settings/settings.component.html
+++ b/src/app/modules/user/settings/settings.component.html
@@ -155,7 +155,7 @@
         (click)="registerUser()"
         [disabled]="registerForm.invalid"
       >
-        Регистрация
+        Запази
       </button>
       <!-- <p class="message">Имате профил? <a (click)="goToLogin()">Логнете се тук</a></p> -->
     </div>
