--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -44,3 +44,12 @@
     padding:0 !important;
     // overflow-y: auto;
    }
+
+.lang-button{
+    cursor: pointer;
+    border-radius: 5px;
+    width: 30px;
+    height: 20px;
+    // padding: 0;
+    // background-color: red;
+}
