--- a/src/app/modules/home/homepage/homepage.component.scss
+++ b/src/app/modules/home/homepage/homepage.component.scss
@@ -1,8 +1,15 @@
-.section { 
-    height: 100vh; 
+.homepage{
     background: url('../../../../assets/road1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+}
+
+.section { 
+    height: 100vh; 
+    // background: url('../../../../assets/road1.jpg');
+    // background-repeat: no-repeat;
+    // background-size: cover;
     // margin-top: -56px;
 }
 
