--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -2,22 +2,24 @@
   <mdb-navbar-brand>
     <a class="logo navbar-brand" pageScroll [routerLink]="['']" href="#myBody">
       <!-- <strong>LOGO</strong> -->
-      <img src="assets/images/logo-slide-3.png" alt="">
+      <img src="assets/images/logo-slide-3.png" alt="" />
     </a>
   </mdb-navbar-brand>
   <links>
     <ul class="navbar-nav mr-auto">
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" pageScroll [routerLink]="['']" href="#first">Търсене
+        <a class="nav-link" pageScroll [routerLink]="['']" href="#first"
+          >{{ 'NAVBAR.SEARCH' | translate }}
         </a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" pageScroll [routerLink]="['']" href="#awesomePart">За нас
+        <a class="nav-link" pageScroll [routerLink]="['']" href="#about-us"
+          >{{ 'NAVBAR.ABOUT' | translate }}
         </a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" [routerLink]="['cars']">Всички коли
-        </a>
+        <a class="nav-link" [routerLink]="['cars']">
+        {{ 'NAVBAR.ALL_CARS' | translate }}</a>
       </li>
       <!-- <li class="nav-item waves-light" mdbWavesEffect>
           <a class="nav-link" (click)="printInfo()">Test</a>
@@ -26,26 +28,49 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="!loggedIn()">
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" (click)="openModalWithComponent(loginComponent)">Вход</a>
+        <a class="nav-link" (click)="openModalWithComponent(loginComponent)"
+          >{{ 'NAVBAR.LOGIN' | translate }}</a
+        >
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" (click)="openModalWithComponent(registrationComponent)">Регистрация</a>
+        <a
+          class="nav-link"
+          (click)="openModalWithComponent(registrationComponent)"
+          >{{ 'NAVBAR.REGISTER' | translate }}</a
+        >
       </li>
     </ul>
     <!-- <button type="button" class="btn btn-primary" (click)="openModalWithComponent()">Create modal with component</button> -->
 
     <ul class="navbar-nav ml-auto" *ngIf="currentUser && loggedIn()">
       <div class="btn-group nav-item" dropdown>
-        <a id="button-basic" dropdownToggle aria-controls="dropdown-basic" type="button"
-          class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+        <a
+          id="button-basic"
+          dropdownToggle
+          aria-controls="dropdown-basic"
+          type="button"
+          class="nav-link dropdown-toggle waves-light"
+          mdbWavesEffect
+        >
           Хостинг
         </a>
-        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-          <li role="menuitem"><a class="dropdown-item" [routerLink]="['host/add-new']"><i class="fas fa-plus"></i>
-              Добави кола</a></li>
-          <li role="menuitem" *ngIf="currentUser.cars_owned.length"><a class="dropdown-item" [routerLink]="['host/manage-cars']">
+        <ul
+          id="dropdown-basic"
+          *dropdownMenu
+          class="dropdown-menu"
+          role="menu"
+          aria-labelledby="button-basic"
+        >
+          <li role="menuitem">
+            <a class="dropdown-item" [routerLink]="['host/add-new']"
+              ><i class="fas fa-plus"></i> Добави кола</a
+            >
+          </li>
+          <li role="menuitem" *ngIf="currentUser.cars_owned.length">
+            <a class="dropdown-item" [routerLink]="['host/manage-cars']">
               <mdb-icon fas icon="cog"></mdb-icon> Моите коли
-            </a></li>
+            </a>
+          </li>
           <!-- <li role="menuitem"><a class="dropdown-item" [routerLink]="['login']" (click)="authService.logoutUser()"><i class="fas fa-sign-out-alt"></i><span class="text-right"> Log Out</span></a></li> -->
         </ul>
       </div>
@@ -54,31 +79,62 @@
         </a>
       </li> -->
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" [routerLink]="['user/reservations']">Резервации
-        </a>
+        <a class="nav-link" [routerLink]="['user/reservations']">Резервации </a>
       </li>
       <div class="btn-group nav-item" dropdown>
-        <a id="button-basic" dropdownToggle aria-controls="dropdown-basic" type="button"
-          class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-          <img *ngIf="currentUser.photo" class="profile-pic" [src]="currentUser.photo" alt="">
+        <a
+          id="button-basic"
+          dropdownToggle
+          aria-controls="dropdown-basic"
+          type="button"
+          class="nav-link dropdown-toggle waves-light"
+          mdbWavesEffect
+        >
+          <img
+            *ngIf="currentUser.photo"
+            class="profile-pic"
+            [src]="currentUser.photo"
+            alt=""
+          />
           {{ currentUser.username }}
           <span class="caret"></span>
         </a>
-        <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
-          <li role="menuitem" [routerLink]="['user/favourites']"><a class="dropdown-item">
-            <i class="fas fa-list-ul"></i> Любими</a>
+        <ul
+          id="dropdown-basic"
+          *dropdownMenu
+          class="dropdown-menu"
+          role="menu"
+          aria-labelledby="button-basic"
+        >
+          <li role="menuitem" [routerLink]="['user/favourites']">
+            <a class="dropdown-item"> <i class="fas fa-list-ul"></i> Любими</a>
           </li>
-          <li role="menuitem" [routerLink]="['user/settings']"><a class="dropdown-item">
+          <li role="menuitem" [routerLink]="['user/settings']">
+            <a class="dropdown-item">
               <mdb-icon fas icon="cog"></mdb-icon> Настройки
-            </a></li>
+            </a>
+          </li>
           <!-- <li role="menuitem" (click)="printInfo()"><a class="dropdown-item">
               <mdb-icon fas icon="envelope"></mdb-icon> Съобщения
             </a></li> -->
           <li class="divider dropdown-divider"></li>
-          <li role="menuitem"><a class="dropdown-item" (click)="authService.logoutUser()"><i
-                class="fas fa-sign-out-alt"></i><span class="text-right"> Изход</span></a></li>
+          <li role="menuitem">
+            <a class="dropdown-item" (click)="authService.logoutUser()"
+              ><i class="fas fa-sign-out-alt"></i
+              ><span class="text-right"> Изход</span></a
+            >
+          </li>
         </ul>
       </div>
+    </ul>
+    
+    <ul class="navbar-nav ml-3">
+      <li class="nav-item waves-light" mdbWavesEffect>
+        <!-- <a class="nav-link lang-button" (click)="switchLanguage()"
+          >{{ language | uppercase }}</a
+        > -->
+        <img class="lang-button" src="assets/images/flags/{{language=='en' ? 'bg' : 'en'}}.png" alt="" (click)="switchLanguage()">
+      </li>
     </ul>
   </links>
 </mdb-navbar>
